# game-dev

./: Cargo.toml  README.md
assets/items/: items.ron  schoolbag.aseprite
assets/rooms/: rooms.ron
assets/shaders/: dotted_border.wgsl
docs/: brick.doc  ~$brick.doc
src/: assets.rs  audio.rs  ball.rs  brick.rs  collision_group.rs  enemy.rs  events.rs  item.rs  main.rs  menu.rs  ui.rs  utils.rs  world.rs
src/audio/: bgm.rs
src/ball/: collision.rs
src/brick/: animation.rs  brick_ball.rs  collision.rs  input.rs  inventory.rs  item_collection.rs  movement.rs  shoot.rs  spawn.rs  stats.rs
src/enemy/: envy.rs  gluttony.rs  greed.rs  lust.rs  pride.rs  sloth.rs  wrath.rs
src/enemy/envy/: collision.rs  spawn.rs
src/enemy/gluttony/: collision.rs  spawn.rs
src/enemy/greed/: collision.rs  spawn.rs
src/enemy/lust/: collision.rs  spawn.rs
src/enemy/pride/: collision.rs  spawn.rs
src/enemy/sloth/: collision.rs  spawn.rs
src/enemy/wrath/: collision.rs  spawn.rs
src/item/: collision.rs  init.rs  pickup.rs  sapwn.rs
src/menu/: init.rs  splash.rs
src/ui/: cursor.rs  inventory.rs  item_pickup_hint.rs  pressure_bar.rs
src/utils/: anim_sprite.rs  collections.rs
src/world/: camera.rs  enemy_spawner.rs  map.rs
src/world/map/: pipelines_readdy.rs  room.rs
src/world/map/room/: control.rs  create.rs  init.rs  loading.rs  select.rs
