[package]
name = "another_brick_in_the_wall"
version = "0.1.0"
edition = "2021"


[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1

[dependencies]
bevy = { version = "0.15.3", default-features = false, features = [
    "android-game-activity",
    "android_shared_stdcxx",
    "animation",
    "bevy_asset",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gilrs",
    "bevy_gizmos",
    "bevy_gltf",
    "bevy_mesh_picking_backend",
    "bevy_pbr",
    "bevy_picking",
    "bevy_render",
    "bevy_scene",
    "bevy_sprite",
    "bevy_sprite_picking_backend",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_ui_picking_backend",
    "bevy_window",
    "bevy_winit",
    "custom_cursor",
    "default_font",
    "hdr",
    "multi_threaded",
    "png",
    "smaa_luts",
    "sysinfo_plugin",
    "tonemapping_luts",
    "webgl2",
    "x11",
]}

bevy_rapier2d = { version = "0.29.0", features = ["default"] }
bevy_asset_loader = { version = "0.22.0", features = ["2d"] }
bevy_framepace = "0.18.1"
bevy_kira_audio = {version = "0.22.0", features = ["android_shared_stdcxx"]}

serde = "1.0.219"
ron = "0.10.1"

rand = "0.8"
rand_distr = "0.4"
